<resources>
    <string name="app_name">inQuery</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logomain">logo</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="sign_up_signup">Sign Up</string>
    <string name="password_signup">password</string>
    <string name="repeat_password">repeat pasword</string>
    <string name="username_signup">username</string>
    <string name="title_activity_squery">s_query</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_shome">shome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_qleavesingle">qleavesingle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>