<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".f_signup">

    <EditText
        android:id="@+id/userId"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/username_signup"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cpwd"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/userPwd"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_signup"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundtop"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/backgroundtop"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="full name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signUP"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="112dp"
        android:background="#CCB0B0"
        android:text="@string/sign_up_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpwd"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>