<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".f_signup">

    <EditText
        android:id="@+id/name"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/username_signup"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#7268A6"
        android:textColor="#7268A6"
        android:background="@drawable/et_background_rounded"
        android:drawableRight="@drawable/icon_profile"
        android:drawablePadding="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/cpwd"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="repeat password"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#7268A6"
        android:textColor="#7268A6"
        android:background="@drawable/et_background_rounded"
        android:drawableRight="@drawable/icon_visible"
        android:drawablePadding="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/userPwd"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/password_signup"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#7268A6"
        android:textColor="#7268A6"
        android:background="@drawable/et_background_rounded"
        android:drawableRight="@drawable/icon_visible"
        android:drawablePadding="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/epf_background"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/epf_background"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#7268A6"
        android:textColor="#7268A6"
        android:background="@drawable/et_background_rounded"
        android:drawableRight="@drawable/icon_profile"
        android:drawablePadding="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signUP"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="112dp"
        android:background="#CCB0B0"
        android:text="@string/sign_up_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpwd"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>